--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -32,8 +32,11 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"./sick_train/SICK_train.txt\", sep=\"\\t\")\n",
-    "df = df.drop(['relatedness_score'], axis=1)"
+    "df_train = pd.read_csv(\"./sick_train/SICK_train.txt\", sep=\"\\t\")\n",
+    "df_train = df_train.drop(['relatedness_score'], axis=1)\n",
+    "\n",
+    "df_test = pd.read_csv(\"./sick_test/SICK_test.txt\", sep=\"\\t\")\n",
+    "df_test = df_test.drop(['relatedness_score'], axis=1)"
    ]
   },
   {
@@ -228,19 +231,19 @@
     "        self.df = df\n",
     "        \n",
     "    def getRef(self, index):\n",
-    "        return df['sentence_AB'][index]\n",
+    "        return self.df['sentence_AB'][index]\n",
     "        \n",
     "    def __getitem__(self, index):\n",
     "        return (\n",
-    "            df['word_idx'][index],\n",
-    "            df['entailment_id'][index])\n",
+    "            self.df['word_idx'][index],\n",
+    "            self.df['entailment_id'][index])\n",
     "    \n",
     "    def __len__(self):\n",
     "        return len(self.df)\n",
     "\n",
     "vocabulary_size = 1000\n",
-    "sick_dataset = SickDataset(df, vocabulary_size)\n",
-    "sick_dataset.df.head()"
+    "sick_dataset_train = SickDataset(df_train, vocabulary_size)\n",
+    "sick_dataset_train.df.head()"
    ]
   },
   {
@@ -362,7 +365,7 @@
     }
    ],
    "source": [
-    "pd.DataFrame(list(zip(sick_dataset.getRef(2), sick_dataset[2][0]))).T"
+    "pd.DataFrame(list(zip(sick_dataset_train.getRef(2), sick_dataset_train[2][0]))).T"
    ]
   },
   {
@@ -384,9 +387,9 @@
      "output_type": "stream",
      "text": [
       "RNNClassifier(\n",
-      "  (embedding): Embedding(1001, 200)\n",
-      "  (rnn): RNN(200, 5, batch_first=True)\n",
-      "  (fc): Linear(in_features=5, out_features=3, bias=True)\n",
+      "  (embedding): Embedding(1001, 100)\n",
+      "  (rnn): RNN(100, 40, batch_first=True)\n",
+      "  (fc): Linear(in_features=40, out_features=3, bias=True)\n",
       ")\n"
      ]
     }
@@ -432,13 +435,13 @@
     "            print(\"  rnn_out\", out.size())\n",
     "        return self.fc(hidden)\n",
     "    \n",
-    "rnn = RNNClassifier(vocabulary_size, 200, 5)\n",
+    "rnn = RNNClassifier(vocabulary_size, 100, 40)\n",
     "print(rnn)\n",
     "\n",
     "# Set loss and optimizer function\n",
     "# CrossEntropyLoss = LogSoftmax + NLLLoss\n",
     "criterion = torch.nn.CrossEntropyLoss()\n",
-    "optimizer = torch.optim.Adam(rnn.parameters(), lr=0.1)"
+    "optimizer = torch.optim.Adam(rnn.parameters(), lr=0.01)"
    ]
   },
   {
@@ -456,14 +459,14 @@
       "        1000,    2,   24,   12,   25,   16,   27,   26,    4,   13,   30,    4,\n",
       "          28,    0])\n",
       "  input torch.Size([26])\n",
-      "  embedding torch.Size([1, 26, 200])\n",
-      "  rnn_out torch.Size([1, 26, 5])\n"
+      "  embedding torch.Size([1, 26, 100])\n",
+      "  rnn_out torch.Size([1, 26, 40])\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "tensor([[[-0.0831, -0.5896, -0.6353]]], grad_fn=<ThAddBackward>)"
+       "tensor([[[0.3855, 0.0750, 0.6575]]], grad_fn=<ThAddBackward>)"
       ]
      },
      "execution_count": 9,
@@ -472,7 +475,7 @@
     }
    ],
    "source": [
-    "inputEx = torch.tensor(sick_dataset[2][0])\n",
+    "inputEx = torch.tensor(sick_dataset_train[2][0])\n",
     "print(inputEx)\n",
     "rnn(inputEx, verbose=True)"
    ]
@@ -493,8 +496,11 @@
    "outputs": [],
    "source": [
     "# TODO, use this insted\n",
-    "train_loader = DataLoader(dataset=sick_dataset,\n",
-    "                          batch_size=1, shuffle=True)"
+    "train_loader = DataLoader(dataset=sick_dataset_train,\n",
+    "                          batch_size=1, shuffle=True)\n",
+    "\n",
+    "#test_loader = DataLoader(dataset=sick_dataset_test,\n",
+    "#                          batch_size=1, shuffle=True)"
    ]
   },
   {
@@ -503,88 +509,76 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/info/etu/m2/s142293/lab/sick/venv/lib/python3.5/site-packages/ipykernel_launcher.py:12: UserWarning: invalid index of a 0-dim tensor. This will be an error in PyTorch 0.5. Use tensor.item() to convert a 0-dim tensor to a Python number\n",
-      "  if sys.path[0] == '':\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Epoch: 0 [    0/4500 (0%)]\tLoss: inf\n",
-      "Train Epoch: 0 [  201/4500 (4%)]\tLoss: 1.01\n",
-      "Train Epoch: 0 [  402/4500 (9%)]\tLoss: 0.97\n",
-      "Train Epoch: 0 [  603/4500 (13%)]\tLoss: 1.01\n",
-      "Train Epoch: 0 [  804/4500 (18%)]\tLoss: 1.06\n",
-      "Train Epoch: 0 [ 1005/4500 (22%)]\tLoss: 1.08\n",
-      "Train Epoch: 0 [ 1206/4500 (27%)]\tLoss: 1.12\n",
-      "Train Epoch: 0 [ 1407/4500 (31%)]\tLoss: 1.14\n",
-      "Train Epoch: 0 [ 1608/4500 (36%)]\tLoss: 1.16\n",
-      "Train Epoch: 0 [ 1809/4500 (40%)]\tLoss: 1.18\n",
-      "Train Epoch: 0 [ 2010/4500 (45%)]\tLoss: 1.19\n",
-      "Train Epoch: 0 [ 2211/4500 (49%)]\tLoss: 1.19\n",
-      "Train Epoch: 0 [ 2412/4500 (54%)]\tLoss: 1.19\n",
-      "Train Epoch: 0 [ 2613/4500 (58%)]\tLoss: 1.19\n",
-      "Train Epoch: 0 [ 2814/4500 (63%)]\tLoss: 1.19\n",
-      "Train Epoch: 0 [ 3015/4500 (67%)]\tLoss: 1.19\n",
-      "Train Epoch: 0 [ 3216/4500 (71%)]\tLoss: 1.19\n",
-      "Train Epoch: 0 [ 3417/4500 (76%)]\tLoss: 1.19\n",
-      "Train Epoch: 0 [ 3618/4500 (80%)]\tLoss: 1.19\n",
-      "Train Epoch: 0 [ 3819/4500 (85%)]\tLoss: 1.18\n",
-      "Train Epoch: 0 [ 4020/4500 (89%)]\tLoss: 1.17\n",
-      "Train Epoch: 0 [ 4221/4500 (94%)]\tLoss: 1.16\n",
-      "Train Epoch: 0 [ 4422/4500 (98%)]\tLoss: 1.16\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "4500",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-dd695c6f6bab>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mtotal_loss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mepoch\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;31m# need to use DataLoader for more epochs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0midx_sentence\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msick_dataset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m         \u001b[0midx_sentence\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0midx_sentence\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0mtarget\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlong\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-5-ceb021ff97f1>\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, index)\u001b[0m\n\u001b[1;32m     62\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__getitem__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     63\u001b[0m         return (\n\u001b[0;32m---> 64\u001b[0;31m             \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'word_idx'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     65\u001b[0m             df['entailment_id'][index])\n\u001b[1;32m     66\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/lab/sick/venv/lib/python3.5/site-packages/pandas/core/series.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    765\u001b[0m         \u001b[0mkey\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_apply_if_callable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    766\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 767\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_value\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    768\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    769\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mis_scalar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/lab/sick/venv/lib/python3.5/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_value\u001b[0;34m(self, series, key)\u001b[0m\n\u001b[1;32m   3116\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3117\u001b[0m             return self._engine.get_value(s, k,\n\u001b[0;32m-> 3118\u001b[0;31m                                           tz=getattr(series.dtype, 'tz', None))\n\u001b[0m\u001b[1;32m   3119\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3120\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minferred_type\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'integer'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'boolean'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_value\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_value\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.Int64HashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.Int64HashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 4500"
+      " Train Epoch: 0 [4401/4500 (98%)]\t Loss: 0.083710\n",
+      " Train Epoch: 1 [4401/4500 (98%)]\t Loss: 0.371592\n",
+      " Train Epoch: 2 [4401/4500 (98%)]\t Loss: 2.975372\n",
+      " Train Epoch: 3 [4401/4500 (98%)]\t Loss: 2.792423\n",
+      " Train Epoch: 4 [4401/4500 (98%)]\t Loss: 2.079801\n",
+      "Learning finished!\n"
      ]
     }
    ],
    "source": [
     "# Train the model\n",
     "rnn = rnn\n",
-    "total_loss = 0\n",
-    "for epoch in range(1): # need to use DataLoader for more epochs\n",
-    "    for i, (idx_sentence, target) in enumerate(sick_dataset):\n",
-    "        idx_sentence = torch.tensor(idx_sentence)\n",
-    "        target = torch.tensor([np.long(target)])\n",
-    "        \n",
-    "        output = rnn(idx_sentence)\n",
+    "verbose = False\n",
     "\n",
-    "        loss = criterion(output[0], target)\n",
-    "        total_loss += loss.data[0]\n",
+    "num_epochs=5\n",
     "\n",
+    "rnn.train()\n",
+    "rnn_losses = []\n",
+    "\n",
+    "for epoch in range(num_epochs):\n",
+    "    loss_value = 0\n",
+    "    for batch_idx, (data, target) in enumerate(train_loader):\n",
     "        rnn.zero_grad()\n",
+    "        \n",
+    "        idx_sentences = data.view(-1)\n",
+    "        if verbose:\n",
+    "            print('idx_sentences', idx_sentences.size())\n",
+    "                \n",
+    "        target = target\n",
+    "        if verbose:\n",
+    "            print('target', target)\n",
+    "        \n",
+    "        output = rnn(idx_sentences)[0]\n",
+    "        if verbose:\n",
+    "            print('output', output)\n",
+    "        \n",
+    "        loss = criterion(output, target)\n",
+    "        loss_value += loss.data.item()\n",
+    "        if verbose:\n",
+    "            print('lose', loss)\n",
+    "        \n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
+    "                \n",
+    "        \n",
+    "        if batch_idx % 100 == 0 or batch_idx % 100 == 1 :\n",
+    "            print('\\r Train Epoch: {} [{}/{} ({:.0f}%)]\\t Loss: {:.6f}'.format(\n",
+    "                    epoch, \n",
+    "                    batch_idx * len(data), \n",
+    "                    len(train_loader.dataset),\n",
+    "                    100. * batch_idx / len(train_loader), \n",
+    "                    loss.data.item()), \n",
+    "                    end='')\n",
+    "            \n",
+    "    print()\n",
+    "    rnn_losses.append(loss_value)\n",
     "\n",
-    "        if i % 201 == 0:\n",
-    "            print('Train Epoch: {} [{:5}/{} ({:.0f}%)]\\tLoss: {:.2f}'.format(\n",
-    "                epoch,  i , len(sick_dataset),\n",
-    "                100. * i  / len(train_loader),\n",
-    "                total_loss / i ))\n",
     "\n",
     "print(\"Learning finished!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -610,7 +604,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
