--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "from IPython.display import display\n",
     "\n",
-    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')"
+    "device = torch.device('cuda:1' if torch.cuda.is_available() else 'cpu')"
    ]
   },
   {
@@ -202,6 +202,7 @@
     "    def series_2_dict(self, series, keep_n):\n",
     "        \"\"\"\n",
     "        Convert document (a list of words) into a list of indexes\n",
+    "        AND apply some filter on the documents\n",
     "        \"\"\"\n",
     "        dictionary = corpora.Dictionary(series)\n",
     "        dictionary.filter_extremes(\n",
@@ -223,7 +224,7 @@
     "        self.dictionary = self.series_2_dict(df['sentence_AB'], vocabulary_size)\n",
     "        \n",
     "        # sentence of words -> array of idx\n",
-    "        # Adds unknown to the voc, Dictionary size vocabulary_size+1\n",
+    "        # Adds unknown to the voc (idx = vocabulary_size), Dictionary size = vocabulary_size+1\n",
     "        df[\"word_idx\"] = df[\"sentence_AB\"].apply(\n",
     "            lambda x: np.array(self.dictionary.doc2idx(x, unknown_word_index=vocabulary_size))\n",
     "        )\n",
@@ -369,6 +370,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create the RNN Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -418,7 +426,9 @@
     "    def forward(self, x, verbose=False):\n",
     "        # Initialize hidden and cell states\n",
     "        # (num_layers * num_directions, batch, hidden_size)\n",
-    "        h_0 = torch.zeros(1, 1, self.hidden_size)\n",
+    "        h_0 = torch.zeros(1, 1, self.hidden_size).to(device)\n",
+    "        # When creating new variables inside a model (like the hidden state in an RNN/GRU/LSTM),\n",
+    "        # make sure to also move them to the device (GPU).\n",
     "\n",
     "        if verbose:\n",
     "            print(\"  input\", x.size())\n",
@@ -436,6 +446,7 @@
     "        return self.fc(hidden)\n",
     "    \n",
     "rnn = RNNClassifier(vocabulary_size, 100, 40)\n",
+    "rnn.to(device)\n",
     "print(rnn)\n",
     "\n",
     "# Set loss and optimizer function\n",
@@ -445,44 +456,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([   1,   24,   31,    8,   25,   16,   27,    6,   18,   13,   11,   29,\n",
-      "        1000,    2,   24,   12,   25,   16,   27,   26,    4,   13,   30,    4,\n",
-      "          28,    0])\n",
-      "  input torch.Size([26])\n",
-      "  embedding torch.Size([1, 26, 100])\n",
-      "  rnn_out torch.Size([1, 26, 40])\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[[0.3855, 0.0750, 0.6575]]], grad_fn=<ThAddBackward>)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "inputEx = torch.tensor(sick_dataset_train[2][0])\n",
-    "print(inputEx)\n",
-    "rnn(inputEx, verbose=True)"
+    "# To DataLoader"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,6 +486,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Training the Model "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -512,18 +501,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Train Epoch: 0 [4401/4500 (98%)]\t Loss: 0.083710\n",
-      " Train Epoch: 1 [4401/4500 (98%)]\t Loss: 0.371592\n",
-      " Train Epoch: 2 [4401/4500 (98%)]\t Loss: 2.975372\n",
-      " Train Epoch: 3 [4401/4500 (98%)]\t Loss: 2.792423\n",
-      " Train Epoch: 4 [4401/4500 (98%)]\t Loss: 2.079801\n",
-      "Learning finished!\n"
+      " Train Epoch: [1/5] | Step [ 4401/4500 (98%)] | Loss: 2.0265 | Accuracy: 48.8869% \n",
+      " Train Epoch: [2/5] | Step [ 4401/4500 (98%)] | Loss: 1.5495 | Accuracy: 48.6143% \n",
+      " Train Epoch: [3/5] | Step [ 4401/4500 (98%)] | Loss: 3.2165 | Accuracy: 50.0227% \n",
+      " Train Epoch: [4/5] | Step [ 4401/4500 (98%)] | Loss: 0.7073 | Accuracy: 49.6592% \n",
+      " Train Epoch: [5/5] | Step [ 4401/4500 (98%)] | Loss: 0.8001 | Accuracy: 50.2045% \n",
+      "Learning finished!\n",
+      "CPU times: user 1min 21s, sys: 1.84 s, total: 1min 23s\n",
+      "Wall time: 1min 23s\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
     "# Train the model\n",
-    "rnn = rnn\n",
     "verbose = False\n",
     "\n",
     "num_epochs=5\n",
@@ -532,9 +523,12 @@
     "rnn_losses = []\n",
     "\n",
     "for epoch in range(num_epochs):\n",
-    "    loss_value = 0\n",
+    "    total_correct = 0\n",
+    "    total_target = 0\n",
     "    for batch_idx, (data, target) in enumerate(train_loader):\n",
-    "        rnn.zero_grad()\n",
+    "        \n",
+    "        data = data.to(device)\n",
+    "        target = target.to(device)\n",
     "        \n",
     "        idx_sentences = data.view(-1)\n",
     "        if verbose:\n",
@@ -549,43 +543,34 @@
     "            print('output', output)\n",
     "        \n",
     "        loss = criterion(output, target)\n",
-    "        loss_value += loss.data.item()\n",
     "        if verbose:\n",
     "            print('lose', loss)\n",
     "        \n",
+    "        rnn.zero_grad()\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
-    "                \n",
+    "        \n",
+    "        # Get the Accuracy\n",
+    "        _, predicted = torch.max(output.data, dim=1)\n",
+    "        correct = (predicted == target).sum().item()\n",
+    "        \n",
+    "        total_correct += correct\n",
+    "        total_target += target.size(0)\n",
     "        \n",
     "        if batch_idx % 100 == 0 or batch_idx % 100 == 1 :\n",
-    "            print('\\r Train Epoch: {} [{}/{} ({:.0f}%)]\\t Loss: {:.6f}'.format(\n",
-    "                    epoch, \n",
+    "            print('\\r Train Epoch: [{}/{}] | Step [{:5}/{} ({:.0f}%)] | Loss: {:.4f} | Accuracy: {:.4f}%'.format(\n",
+    "                    epoch+1, num_epochs,\n",
     "                    batch_idx * len(data), \n",
     "                    len(train_loader.dataset),\n",
     "                    100. * batch_idx / len(train_loader), \n",
-    "                    loss.data.item()), \n",
-    "                    end='')\n",
+    "                    loss.item(), \n",
+    "                    (total_correct / total_target) * 100), end=' ')\n",
     "            \n",
     "    print()\n",
-    "    rnn_losses.append(loss_value)\n",
     "\n",
     "\n",
     "print(\"Learning finished!\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -604,7 +589,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
