--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -213,15 +213,19 @@
     "        return dictionary\n",
     "    \n",
     "    \n",
-    "    def __init__(self, df, vocabulary_size):\n",
+    "    def __init__(self, df, vocabulary_size, dic = None):\n",
     "        # Label text as ids\n",
     "        df[\"entailment_id\"] = self.series_text_2_labelID(df['entailment_judgment'])\n",
     "        \n",
     "        # Add <s>,</s>,<sep> tokens to the vocabulary\n",
     "        df['sentence_AB'] = df.apply(self.join_sentence, axis=1)\n",
     "        \n",
-    "        # Create the Dictionary\n",
-    "        self.dictionary = self.series_2_dict(df['sentence_AB'], vocabulary_size)\n",
+    "        # check if the dictionary is given\n",
+    "        if dic is None:\n",
+    "            # Create the Dictionary\n",
+    "            self.dictionary = self.series_2_dict(df['sentence_AB'], vocabulary_size)\n",
+    "        else:\n",
+    "            self.dictionary = dic\n",
     "        \n",
     "        # sentence of words -> array of idx\n",
     "        # Adds unknown to the voc (idx = vocabulary_size), Dictionary size = vocabulary_size+1\n",
@@ -239,6 +243,9 @@
     "            self.df['word_idx'][index],\n",
     "            self.df['entailment_id'][index])\n",
     "    \n",
+    "    def getDictionary(self):\n",
+    "        return self.dictionary\n",
+    "    \n",
     "    def __len__(self):\n",
     "        return len(self.df)\n",
     "\n",
@@ -250,6 +257,136 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dictionary(1000 unique tokens: ['', 'begging', 'thin', 'mixture', 'rising']...)\n",
+      "Dictionary(1000 unique tokens: ['', 'begging', 'thin', 'mixture', 'rising']...)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pair_ID</th>\n",
+       "      <th>sentence_A</th>\n",
+       "      <th>sentence_B</th>\n",
+       "      <th>entailment_judgment</th>\n",
+       "      <th>entailment_id</th>\n",
+       "      <th>sentence_AB</th>\n",
+       "      <th>word_idx</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6</td>\n",
+       "      <td>There is no boy playing outdoors and there is no man smiling</td>\n",
+       "      <td>A group of kids is playing in a yard and an old man is standing in the background</td>\n",
+       "      <td>NEUTRAL</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[&lt;s&gt;, There, is, no, boy, playing, outdoors, and, there, is, no, man, smiling, &lt;sep&gt;, A, group, ...</td>\n",
+       "      <td>[1, 100, 11, 22, 148, 16, 27, 6, 23, 11, 22, 13, 29, 2, 3, 9, 14, 12, 11, 16, 10, 4, 19, 6, 5, 1...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7</td>\n",
+       "      <td>A group of boys in a yard is playing and a man is standing in the background</td>\n",
+       "      <td>The young boys are playing outdoors and the man is smiling nearby</td>\n",
+       "      <td>NEUTRAL</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[&lt;s&gt;, A, group, of, boys, in, a, yard, is, playing, and, a, man, is, standing, in, the, backgrou...</td>\n",
+       "      <td>[1, 3, 9, 14, 8, 10, 4, 19, 11, 16, 6, 4, 13, 11, 17, 10, 18, 7, 2, 24, 31, 8, 25, 16, 27, 6, 18...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8</td>\n",
+       "      <td>A group of children is playing in the house and there is no man standing in the background</td>\n",
+       "      <td>The young boys are playing outdoors and the man is smiling nearby</td>\n",
+       "      <td>NEUTRAL</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[&lt;s&gt;, A, group, of, children, is, playing, in, the, house, and, there, is, no, man, standing, in...</td>\n",
+       "      <td>[1, 3, 9, 14, 20, 11, 16, 10, 18, 21, 6, 23, 11, 22, 13, 17, 10, 18, 7, 2, 24, 31, 8, 25, 16, 27...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10</td>\n",
+       "      <td>A brown dog is attacking another animal in front of the tall man in pants</td>\n",
+       "      <td>A brown dog is attacking another animal in front of the man in pants</td>\n",
+       "      <td>ENTAILMENT</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[&lt;s&gt;, A, brown, dog, is, attacking, another, animal, in, front, of, the, tall, man, in, pants, &lt;...</td>\n",
+       "      <td>[1, 3, 38, 39, 11, 1000, 37, 36, 10, 40, 14, 18, 268, 13, 10, 41, 2, 3, 38, 39, 11, 1000, 37, 36...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>11</td>\n",
+       "      <td>A brown dog is attacking another animal in front of the man in pants</td>\n",
+       "      <td>A brown dog is helping another animal in front of the man in pants</td>\n",
+       "      <td>NEUTRAL</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[&lt;s&gt;, A, brown, dog, is, attacking, another, animal, in, front, of, the, man, in, pants, &lt;sep&gt;, ...</td>\n",
+       "      <td>[1, 3, 38, 39, 11, 1000, 37, 36, 10, 40, 14, 18, 13, 10, 41, 2, 3, 38, 39, 11, 1000, 37, 36, 10,...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   pair_ID                                                                                  sentence_A                                                                         sentence_B entailment_judgment  entailment_id                                                                                          sentence_AB  \\\n",
+       "0        6                                There is no boy playing outdoors and there is no man smiling  A group of kids is playing in a yard and an old man is standing in the background             NEUTRAL              0  [<s>, There, is, no, boy, playing, outdoors, and, there, is, no, man, smiling, <sep>, A, group, ...   \n",
+       "1        7                A group of boys in a yard is playing and a man is standing in the background                  The young boys are playing outdoors and the man is smiling nearby             NEUTRAL              0  [<s>, A, group, of, boys, in, a, yard, is, playing, and, a, man, is, standing, in, the, backgrou...   \n",
+       "2        8  A group of children is playing in the house and there is no man standing in the background                  The young boys are playing outdoors and the man is smiling nearby             NEUTRAL              0  [<s>, A, group, of, children, is, playing, in, the, house, and, there, is, no, man, standing, in...   \n",
+       "3       10                   A brown dog is attacking another animal in front of the tall man in pants               A brown dog is attacking another animal in front of the man in pants          ENTAILMENT              1  [<s>, A, brown, dog, is, attacking, another, animal, in, front, of, the, tall, man, in, pants, <...   \n",
+       "4       11                        A brown dog is attacking another animal in front of the man in pants                 A brown dog is helping another animal in front of the man in pants             NEUTRAL              0  [<s>, A, brown, dog, is, attacking, another, animal, in, front, of, the, man, in, pants, <sep>, ...   \n",
+       "\n",
+       "                                                                                              word_idx  \n",
+       "0  [1, 100, 11, 22, 148, 16, 27, 6, 23, 11, 22, 13, 29, 2, 3, 9, 14, 12, 11, 16, 10, 4, 19, 6, 5, 1...  \n",
+       "1  [1, 3, 9, 14, 8, 10, 4, 19, 11, 16, 6, 4, 13, 11, 17, 10, 18, 7, 2, 24, 31, 8, 25, 16, 27, 6, 18...  \n",
+       "2  [1, 3, 9, 14, 20, 11, 16, 10, 18, 21, 6, 23, 11, 22, 13, 17, 10, 18, 7, 2, 24, 31, 8, 25, 16, 27...  \n",
+       "3  [1, 3, 38, 39, 11, 1000, 37, 36, 10, 40, 14, 18, 268, 13, 10, 41, 2, 3, 38, 39, 11, 1000, 37, 36...  \n",
+       "4  [1, 3, 38, 39, 11, 1000, 37, 36, 10, 40, 14, 18, 13, 10, 41, 2, 3, 38, 39, 11, 1000, 37, 36, 10,...  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dictionary_train = sick_dataset_train.getDictionary()\n",
+    "print(dictionary_train)\n",
+    "vocabulary_size = len(dictionary_train)\n",
+    "\n",
+    "sick_dataset_test = SickDataset(df_test, vocabulary_size, dictionary_train)\n",
+    "dictionary_test = sick_dataset_test.getDictionary()\n",
+    "print(dictionary_test)\n",
+    "sick_dataset_test.df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -360,7 +497,7 @@
        "[2 rows x 26 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -396,8 +533,8 @@
      "text": [
       "RNNClassifier(\n",
       "  (embedding): Embedding(1001, 100)\n",
-      "  (rnn): RNN(100, 40, batch_first=True)\n",
-      "  (fc): Linear(in_features=40, out_features=3, bias=True)\n",
+      "  (rnn): RNN(100, 10, batch_first=True)\n",
+      "  (fc): Linear(in_features=10, out_features=3, bias=True)\n",
       ")\n"
      ]
     }
@@ -445,7 +582,7 @@
     "            print(\"  rnn_out\", out.size())\n",
     "        return self.fc(hidden)\n",
     "    \n",
-    "rnn = RNNClassifier(vocabulary_size, 100, 40)\n",
+    "rnn = RNNClassifier(vocabulary_size, 100, 10)\n",
     "rnn.to(device)\n",
     "print(rnn)\n",
     "\n",
@@ -464,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,8 +618,8 @@
     "train_loader = DataLoader(dataset=sick_dataset_train,\n",
     "                          batch_size=1, shuffle=True)\n",
     "\n",
-    "#test_loader = DataLoader(dataset=sick_dataset_test,\n",
-    "#                          batch_size=1, shuffle=True)"
+    "test_loader = DataLoader(dataset=sick_dataset_test,\n",
+    "                          batch_size=1, shuffle=True)"
    ]
   },
   {
@@ -501,14 +638,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Train Epoch: [1/5] | Step [ 4401/4500 (98%)] | Loss: 2.0265 | Accuracy: 48.8869% \n",
-      " Train Epoch: [2/5] | Step [ 4401/4500 (98%)] | Loss: 1.5495 | Accuracy: 48.6143% \n",
-      " Train Epoch: [3/5] | Step [ 4401/4500 (98%)] | Loss: 3.2165 | Accuracy: 50.0227% \n",
-      " Train Epoch: [4/5] | Step [ 4401/4500 (98%)] | Loss: 0.7073 | Accuracy: 49.6592% \n",
-      " Train Epoch: [5/5] | Step [ 4401/4500 (98%)] | Loss: 0.8001 | Accuracy: 50.2045% \n",
+      " Train Epoch: [1/2] | Step [ 4401/4500 (98%)] | Loss: 1.7585 | Accuracy: 54.3389% \n",
+      " Train Epoch: [2/2] | Step [ 4401/4500 (98%)] | Loss: 0.6678 | Accuracy: 53.8392% \n",
       "Learning finished!\n",
-      "CPU times: user 1min 21s, sys: 1.84 s, total: 1min 23s\n",
-      "Wall time: 1min 23s\n"
+      "CPU times: user 35.8 s, sys: 1.47 s, total: 37.3 s\n",
+      "Wall time: 37 s\n"
      ]
     }
    ],
@@ -517,7 +651,7 @@
     "# Train the model\n",
     "verbose = False\n",
     "\n",
-    "num_epochs=5\n",
+    "num_epochs=2\n",
     "\n",
     "rnn.train()\n",
     "rnn_losses = []\n",
@@ -571,6 +705,71 @@
     "\n",
     "print(\"Learning finished!\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Evaluate the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Step [ 4901/4927 (99%)] | Accuracy: 56.6911% CPU times: user 6.62 s, sys: 80 ms, total: 6.7 s\n",
+      "Wall time: 6.68 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "total_correct = 0\n",
+    "total_target = 0\n",
+    "for batch_idx, (data, target) in enumerate(test_loader):\n",
+    "        \n",
+    "        data = data.to(device)\n",
+    "        target = target.to(device)\n",
+    "        \n",
+    "        idx_sentences = data.view(-1)\n",
+    "        if verbose:\n",
+    "            print('idx_sentences', idx_sentences.size())\n",
+    "                \n",
+    "        target = target\n",
+    "        if verbose:\n",
+    "            print('target', target)\n",
+    "        \n",
+    "        output = rnn(idx_sentences)[0]\n",
+    "        if verbose:\n",
+    "            print('output', output)\n",
+    "        \n",
+    "        # Get the Accuracy\n",
+    "        _, predicted = torch.max(output.data, dim=1)\n",
+    "        correct = (predicted == target).sum().item()\n",
+    "        \n",
+    "        total_correct += correct\n",
+    "        total_target += target.size(0)\n",
+    "        \n",
+    "        if batch_idx % 100 == 0 or batch_idx % 100 == 1 :\n",
+    "            print('\\r Step [{:5}/{} ({:.0f}%)] | Accuracy: {:.4f}%'.format(\n",
+    "                    batch_idx * len(data), \n",
+    "                    len(test_loader.dataset),\n",
+    "                    100. * batch_idx / len(test_loader), \n",
+    "                    (total_correct / total_target) * 100), end=' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
