--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -35,6 +35,9 @@
     "df_train = pd.read_csv(\"./sick_train/SICK_train.txt\", sep=\"\\t\")\n",
     "df_train = df_train.drop(['relatedness_score'], axis=1)\n",
     "\n",
+    "df_dev = pd.read_csv(\"./sick_trial/SICK_trial.txt\", sep=\"\\t\")\n",
+    "df_dev = df_dev.drop(['relatedness_score'], axis=1)\n",
+    "\n",
     "df_test = pd.read_csv(\"./sick_test/SICK_test.txt\", sep=\"\\t\")\n",
     "df_test = df_test.drop(['relatedness_score'], axis=1)"
    ]
@@ -263,8 +266,131 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dictionary(1000 unique tokens: ['', 'begging', 'thin', 'mixture', 'rising']...)\n",
-      "Dictionary(1000 unique tokens: ['', 'begging', 'thin', 'mixture', 'rising']...)\n"
+      "Dictionary(1000 unique tokens: ['', 'little', 'another', 'ramp', 'keyboard']...)\n",
+      "Dictionary(1000 unique tokens: ['', 'little', 'another', 'ramp', 'keyboard']...)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pair_ID</th>\n",
+       "      <th>sentence_A</th>\n",
+       "      <th>sentence_B</th>\n",
+       "      <th>entailment_judgment</th>\n",
+       "      <th>entailment_id</th>\n",
+       "      <th>sentence_AB</th>\n",
+       "      <th>word_idx</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4</td>\n",
+       "      <td>The young boys are playing outdoors and the man is smiling nearby</td>\n",
+       "      <td>There is no boy playing outdoors and there is no man smiling</td>\n",
+       "      <td>CONTRADICTION</td>\n",
+       "      <td>2</td>\n",
+       "      <td>[&lt;s&gt;, The, young, boys, are, playing, outdoors, and, the, man, is, smiling, nearby, &lt;sep&gt;, There...</td>\n",
+       "      <td>[1, 24, 31, 8, 25, 16, 27, 6, 18, 13, 11, 29, 1000, 2, 102, 11, 22, 150, 16, 27, 6, 23, 11, 22, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>24</td>\n",
+       "      <td>A person in a black jacket is doing tricks on a motorbike</td>\n",
+       "      <td>A skilled person is riding a bicycle on one wheel</td>\n",
+       "      <td>NEUTRAL</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[&lt;s&gt;, A, person, in, a, black, jacket, is, doing, tricks, on, a, motorbike, &lt;sep&gt;, A, skilled, p...</td>\n",
+       "      <td>[1, 3, 50, 10, 4, 44, 46, 11, 45, 52, 48, 4, 47, 2, 3, 1000, 50, 11, 51, 4, 43, 48, 49, 53, 0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>105</td>\n",
+       "      <td>Four children are doing backbends in the gym</td>\n",
+       "      <td>Four girls are doing backbends and playing outdoors</td>\n",
+       "      <td>NEUTRAL</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[&lt;s&gt;, Four, children, are, doing, backbends, in, the, gym, &lt;sep&gt;, Four, girls, are, doing, backb...</td>\n",
+       "      <td>[1, 108, 20, 25, 45, 1000, 10, 18, 110, 2, 108, 112, 25, 45, 1000, 6, 16, 27, 0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>116</td>\n",
+       "      <td>A player is throwing the ball</td>\n",
+       "      <td>Two teams are competing in a football match</td>\n",
+       "      <td>NEUTRAL</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[&lt;s&gt;, A, player, is, throwing, the, ball, &lt;sep&gt;, Two, teams, are, competing, in, a, football, ma...</td>\n",
+       "      <td>[1, 3, 65, 11, 597, 18, 55, 2, 32, 119, 25, 118, 10, 4, 116, 1000, 0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>119</td>\n",
+       "      <td>Five children are standing in front of a wooden hut</td>\n",
+       "      <td>Five children are standing in a wooden hut</td>\n",
+       "      <td>NEUTRAL</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[&lt;s&gt;, Five, children, are, standing, in, front, of, a, wooden, hut, &lt;sep&gt;, Five, children, are, ...</td>\n",
+       "      <td>[1, 120, 20, 25, 17, 10, 40, 14, 4, 122, 1000, 2, 120, 20, 25, 17, 10, 4, 122, 1000, 0]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   pair_ID                                                         sentence_A                                                    sentence_B entailment_judgment  entailment_id                                                                                          sentence_AB                                                                                             word_idx\n",
+       "0        4  The young boys are playing outdoors and the man is smiling nearby  There is no boy playing outdoors and there is no man smiling       CONTRADICTION              2  [<s>, The, young, boys, are, playing, outdoors, and, the, man, is, smiling, nearby, <sep>, There...  [1, 24, 31, 8, 25, 16, 27, 6, 18, 13, 11, 29, 1000, 2, 102, 11, 22, 150, 16, 27, 6, 23, 11, 22, ...\n",
+       "1       24          A person in a black jacket is doing tricks on a motorbike             A skilled person is riding a bicycle on one wheel             NEUTRAL              0  [<s>, A, person, in, a, black, jacket, is, doing, tricks, on, a, motorbike, <sep>, A, skilled, p...       [1, 3, 50, 10, 4, 44, 46, 11, 45, 52, 48, 4, 47, 2, 3, 1000, 50, 11, 51, 4, 43, 48, 49, 53, 0]\n",
+       "2      105                       Four children are doing backbends in the gym           Four girls are doing backbends and playing outdoors             NEUTRAL              0  [<s>, Four, children, are, doing, backbends, in, the, gym, <sep>, Four, girls, are, doing, backb...                     [1, 108, 20, 25, 45, 1000, 10, 18, 110, 2, 108, 112, 25, 45, 1000, 6, 16, 27, 0]\n",
+       "3      116                                      A player is throwing the ball                   Two teams are competing in a football match             NEUTRAL              0  [<s>, A, player, is, throwing, the, ball, <sep>, Two, teams, are, competing, in, a, football, ma...                                [1, 3, 65, 11, 597, 18, 55, 2, 32, 119, 25, 118, 10, 4, 116, 1000, 0]\n",
+       "4      119                Five children are standing in front of a wooden hut                    Five children are standing in a wooden hut             NEUTRAL              0  [<s>, Five, children, are, standing, in, front, of, a, wooden, hut, <sep>, Five, children, are, ...              [1, 120, 20, 25, 17, 10, 40, 14, 4, 122, 1000, 2, 120, 20, 25, 17, 10, 4, 122, 1000, 0]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create the dev dataset\n",
+    "dictionary_train = sick_dataset_train.getDictionary()\n",
+    "print(dictionary_train)\n",
+    "vocabulary_size = len(dictionary_train)\n",
+    "\n",
+    "sick_dataset_dev = SickDataset(df_dev, vocabulary_size, dictionary_train)\n",
+    "dictionary_dev = sick_dataset_dev.getDictionary()\n",
+    "print(dictionary_dev)\n",
+    "sick_dataset_dev.df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dictionary(1000 unique tokens: ['', 'little', 'another', 'ramp', 'keyboard']...)\n"
      ]
     },
     {
@@ -306,7 +432,7 @@
        "      <td>NEUTRAL</td>\n",
        "      <td>0</td>\n",
        "      <td>[&lt;s&gt;, There, is, no, boy, playing, outdoors, and, there, is, no, man, smiling, &lt;sep&gt;, A, group, ...</td>\n",
-       "      <td>[1, 100, 11, 22, 148, 16, 27, 6, 23, 11, 22, 13, 29, 2, 3, 9, 14, 12, 11, 16, 10, 4, 19, 6, 5, 1...</td>\n",
+       "      <td>[1, 102, 11, 22, 150, 16, 27, 6, 23, 11, 22, 13, 29, 2, 3, 9, 14, 12, 11, 16, 10, 4, 19, 6, 5, 1...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -336,7 +462,7 @@
        "      <td>ENTAILMENT</td>\n",
        "      <td>1</td>\n",
        "      <td>[&lt;s&gt;, A, brown, dog, is, attacking, another, animal, in, front, of, the, tall, man, in, pants, &lt;...</td>\n",
-       "      <td>[1, 3, 38, 39, 11, 1000, 37, 36, 10, 40, 14, 18, 268, 13, 10, 41, 2, 3, 38, 39, 11, 1000, 37, 36...</td>\n",
+       "      <td>[1, 3, 38, 39, 11, 1000, 37, 36, 10, 40, 14, 18, 270, 13, 10, 41, 2, 3, 38, 39, 11, 1000, 37, 36...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -361,22 +487,20 @@
        "4       11                        A brown dog is attacking another animal in front of the man in pants                 A brown dog is helping another animal in front of the man in pants             NEUTRAL              0  [<s>, A, brown, dog, is, attacking, another, animal, in, front, of, the, man, in, pants, <sep>, ...   \n",
        "\n",
        "                                                                                              word_idx  \n",
-       "0  [1, 100, 11, 22, 148, 16, 27, 6, 23, 11, 22, 13, 29, 2, 3, 9, 14, 12, 11, 16, 10, 4, 19, 6, 5, 1...  \n",
+       "0  [1, 102, 11, 22, 150, 16, 27, 6, 23, 11, 22, 13, 29, 2, 3, 9, 14, 12, 11, 16, 10, 4, 19, 6, 5, 1...  \n",
        "1  [1, 3, 9, 14, 8, 10, 4, 19, 11, 16, 6, 4, 13, 11, 17, 10, 18, 7, 2, 24, 31, 8, 25, 16, 27, 6, 18...  \n",
        "2  [1, 3, 9, 14, 20, 11, 16, 10, 18, 21, 6, 23, 11, 22, 13, 17, 10, 18, 7, 2, 24, 31, 8, 25, 16, 27...  \n",
-       "3  [1, 3, 38, 39, 11, 1000, 37, 36, 10, 40, 14, 18, 268, 13, 10, 41, 2, 3, 38, 39, 11, 1000, 37, 36...  \n",
+       "3  [1, 3, 38, 39, 11, 1000, 37, 36, 10, 40, 14, 18, 270, 13, 10, 41, 2, 3, 38, 39, 11, 1000, 37, 36...  \n",
        "4  [1, 3, 38, 39, 11, 1000, 37, 36, 10, 40, 14, 18, 13, 10, 41, 2, 3, 38, 39, 11, 1000, 37, 36, 10,...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dictionary_train = sick_dataset_train.getDictionary()\n",
-    "print(dictionary_train)\n",
-    "vocabulary_size = len(dictionary_train)\n",
+    "# Create the test dataset\n",
     "\n",
     "sick_dataset_test = SickDataset(df_test, vocabulary_size, dictionary_train)\n",
     "dictionary_test = sick_dataset_test.getDictionary()\n",
@@ -386,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -497,7 +621,7 @@
        "[2 rows x 26 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,12 +734,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO, use this insted\n",
     "train_loader = DataLoader(dataset=sick_dataset_train,\n",
+    "                          batch_size=1, shuffle=True)\n",
+    "\n",
+    "dev_loader = DataLoader(dataset=sick_dataset_dev,\n",
     "                          batch_size=1, shuffle=True)\n",
     "\n",
     "test_loader = DataLoader(dataset=sick_dataset_test,\n",
@@ -631,18 +758,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Train Epoch: [1/2] | Step [ 4401/4500 (98%)] | Loss: 1.7585 | Accuracy: 54.3389% \n",
-      " Train Epoch: [2/2] | Step [ 4401/4500 (98%)] | Loss: 0.6678 | Accuracy: 53.8392% \n",
+      " Train Epoch: [1/2] | Step [ 4401/4500 (98%)] | Loss: 0.6828 | Accuracy: 53.9073% \n",
+      " Train Epoch: [2/2] | Step [ 4401/4500 (98%)] | Loss: 2.5501 | Accuracy: 53.9300% \n",
       "Learning finished!\n",
-      "CPU times: user 35.8 s, sys: 1.47 s, total: 37.3 s\n",
-      "Wall time: 37 s\n"
+      "CPU times: user 41.7 s, sys: 1.78 s, total: 43.5 s\n",
+      "Wall time: 43.4 s\n"
      ]
     }
    ],
@@ -710,7 +837,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Evaluate the model"
+    "# Evaluate the model on dev"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Step [  401/500 (80%)] | Accuracy: 54.9751% CPU times: user 736 ms, sys: 4 ms, total: 740 ms\n",
+      "Wall time: 735 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "total_correct = 0\n",
+    "total_target = 0\n",
+    "for batch_idx, (data, target) in enumerate(dev_loader):\n",
+    "        \n",
+    "        data = data.to(device)\n",
+    "        target = target.to(device)\n",
+    "        \n",
+    "        idx_sentences = data.view(-1)\n",
+    "        if verbose:\n",
+    "            print('idx_sentences', idx_sentences.size())\n",
+    "                \n",
+    "        target = target\n",
+    "        if verbose:\n",
+    "            print('target', target)\n",
+    "        \n",
+    "        output = rnn(idx_sentences)[0]\n",
+    "        if verbose:\n",
+    "            print('output', output)\n",
+    "        \n",
+    "        # Get the Accuracy\n",
+    "        _, predicted = torch.max(output.data, dim=1)\n",
+    "        correct = (predicted == target).sum().item()\n",
+    "        \n",
+    "        total_correct += correct\n",
+    "        total_target += target.size(0)\n",
+    "        \n",
+    "        if batch_idx % 100 == 0 or batch_idx % 100 == 1 :\n",
+    "            print('\\r Step [{:5}/{} ({:.0f}%)] | Accuracy: {:.4f}%'.format(\n",
+    "                    batch_idx * len(data), \n",
+    "                    len(dev_loader.dataset),\n",
+    "                    100. * batch_idx / len(dev_loader), \n",
+    "                    (total_correct / total_target) * 100), end=' ')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Evaluate the model on test"
    ]
   },
   {
@@ -722,8 +907,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Step [ 4901/4927 (99%)] | Accuracy: 56.6911% CPU times: user 6.62 s, sys: 80 ms, total: 6.7 s\n",
-      "Wall time: 6.68 s\n"
+      " Step [ 4901/4927 (99%)] | Accuracy: 56.6707% CPU times: user 7.12 s, sys: 92 ms, total: 7.21 s\n",
+      "Wall time: 7.17 s\n"
      ]
     }
    ],
